[package]
name = "xml-orbtk"
version = "0.1.0"
authors = ["julian lazaras <lazaras@pdx.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orbtk = {path = "../custom-reg/orbtk"}
scraper = "*"
html5ever = "*"
ego-tree = "*"
inner = "*"